# Vatrych4

./: CMakeLists.txt  README.md  ci.bat  math_operations.cpp  math_operations.h
tests/: unit_tests.cpp
